@@ -9,6 +9,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.TreeMap;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -24,11 +25,12 @@ import io.javaoperatorsdk.operator.processing.dependent.kubernetes.CRUDKubernete
 import io.javaoperatorsdk.operator.processing.dependent.kubernetes.KubernetesDependent;
 
 import io.kroxylicious.kubernetes.api.v1alpha1.KafkaProxy;
+import io.kroxylicious.kubernetes.api.v1alpha1.KafkaProxyIngress;
 import io.kroxylicious.kubernetes.api.v1alpha1.VirtualKafkaCluster;
 import io.kroxylicious.kubernetes.operator.Annotations;
 import io.kroxylicious.kubernetes.operator.ResourcesUtil;
+import io.kroxylicious.kubernetes.operator.model.networking.ClusterIngressNetworkingModel;
 import io.kroxylicious.kubernetes.operator.model.networking.ProxyNetworkingModel;
-import io.kroxylicious.kubernetes.operator.model.networking.SharedLoadBalancerServiceRequirements;
 import io.kroxylicious.kubernetes.operator.resolver.ClusterResolutionResult;
 
 import static io.kroxylicious.kubernetes.operator.Labels.standardLabels;
@@ -40,6 +42,8 @@ import static io.kroxylicious.kubernetes.operator.reconciler.kafkaproxy.ProxyDep
  * Generates the Kube {@code Service} for a single virtual cluster.
  * This is named like {@code ${cluster.name}}, which allows clusters to migrate between proxy
  * instances in the same namespace without impacts clients using the Service's DNS name.
+ * Also generates one {@code Service} per {@code loadBalancer} {@code KafkaProxyIngress} that is
+ * referenced by at least one valid {@code VirtualKafkaCluster}, named after that ingress.
  */
 @KubernetesDependent(useSSA = BooleanWithUndefined.TRUE)
 public class ClusterServiceDependentResource
@@ -76,65 +80,69 @@ public class ClusterServiceDependentResource
         var serviceStream = clusterNetworkingModels.stream()
                 .flatMap(ProxyNetworkingModel.ClusterNetworkingModel::services);
 
-        var sharedSniLoadbalancerPorts = clusterNetworkingModels.stream()
-                .flatMap(ProxyNetworkingModel.ClusterNetworkingModel::requiredSniLoadbalancerPorts)
-                .distinct().sorted().toList();
+        // Group the per-(cluster, ingress) models that require a shared LoadBalancer Service by the
+        // ingress they belong to. A TreeMap keeps iteration order deterministic (golden-file tests
+        // depend on it) irrespective of the order clusters/ingresses were discovered in.
+        Map<String, List<ClusterIngressNetworkingModel>> loadBalancerModelsByIngressName = clusterNetworkingModels.stream()
+                .flatMap(clusterNetworkingModel -> clusterNetworkingModel.clusterIngressNetworkingModelResults().stream())
+                .map(ProxyNetworkingModel.ClusterIngressNetworkingModelResult::clusterIngressNetworkingModel)
+                .filter(ingressModel -> ingressModel.sharedLoadBalancerServiceRequirements().isPresent())
+                .collect(Collectors.groupingBy(ingressModel -> ResourcesUtil.name(ingressModel.ingress()), TreeMap::new, Collectors.toList()));
 
-        Set<Annotations.ClusterIngressBootstrapServers> bootstraps = getLoadBalancerServiceBootstrapServers(clusterNetworkingModels);
-
-        var sniServiceStream = sniLoadbalancerServices(primary, sharedSniLoadbalancerPorts, bootstraps);
+        var sniServiceStream = loadBalancerModelsByIngressName.values().stream()
+                .flatMap(ingressModels -> sniLoadbalancerServices(primary, ingressModels));
 
         return Stream.concat(serviceStream, sniServiceStream).collect(toByNameMap());
     }
 
-    /**
-     * Get the bootstrap servers hosted by the shared LoadBalancer Service
-     */
-    private static Set<Annotations.ClusterIngressBootstrapServers> getLoadBalancerServiceBootstrapServers(List<ProxyNetworkingModel.ClusterNetworkingModel> clusterNetworkingModels) {
-        return clusterNetworkingModels.stream()
-                .flatMap(ClusterServiceDependentResource::getBootstrapServers)
-                .collect(Collectors.toSet());
-    }
-
-    private static Stream<Annotations.ClusterIngressBootstrapServers> getBootstrapServers(ProxyNetworkingModel.ClusterNetworkingModel networking) {
-        return networking.clusterIngressNetworkingModelResults().stream()
-                .map(ProxyNetworkingModel.ClusterIngressNetworkingModelResult::clusterIngressNetworkingModel)
-                .flatMap(networkingModel -> networkingModel.sharedLoadBalancerServiceRequirements().stream())
-                .map(SharedLoadBalancerServiceRequirements::bootstrapServersToAnnotate);
-    }
-
-    private ObjectMeta sniLoadbalancerServiceMetadata(KafkaProxy primary, String name, Set<Annotations.ClusterIngressBootstrapServers> bootstraps) {
+    private ObjectMeta sniLoadbalancerServiceMetadata(KafkaProxy primary, ClusterIngressNetworkingModel ingressModel, String name,
+                                                      Set<Annotations.ClusterIngressBootstrapServers> bootstraps) {
         ObjectMetaBuilder builder = new ObjectMetaBuilder()
                 .withName(name)
                 .withNamespace(namespace(primary))
                 .addToLabels(standardLabels(primary))
-                .addNewOwnerReferenceLike(ResourcesUtil.newOwnerReferenceTo(primary)).endOwnerReference();
+                .addNewOwnerReferenceLike(ResourcesUtil.newOwnerReferenceTo(primary)).endOwnerReference()
+                .addNewOwnerReferenceLike(ResourcesUtil.newOwnerReferenceTo(ingressModel.ingress())).endOwnerReference();
+        ingressModel.applyInfrastructureAnnotations(builder);
         Annotations.annotateWithBootstrapServers(builder, bootstraps);
         return builder.build();
     }
 
-    private Stream<Service> sniLoadbalancerServices(KafkaProxy primary, List<Integer> loadBalancerPorts, Set<Annotations.ClusterIngressBootstrapServers> bootstraps) {
+    /**
+     * Builds the single shared LoadBalancer Service for one {@code loadBalancer} {@code KafkaProxyIngress},
+     * given all the per-cluster models that reference it.
+     */
+    private Stream<Service> sniLoadbalancerServices(KafkaProxy primary, List<ClusterIngressNetworkingModel> ingressModels) {
+        List<Integer> loadBalancerPorts = ingressModels.stream()
+                .flatMap(ingressModel -> ingressModel.sharedLoadBalancerServiceRequirements().orElseThrow().requiredClientFacingPorts())
+                .distinct()
+                .sorted()
+                .toList();
         if (loadBalancerPorts.isEmpty()) {
             return Stream.empty();
         }
-        else {
-            String serviceName = ResourcesUtil.name(primary) + "-sni";
-            var serviceSpecBuilder = new ServiceBuilder()
-                    .withMetadata(sniLoadbalancerServiceMetadata(primary, serviceName, bootstraps))
-                    .withNewSpec()
-                    .withType("LoadBalancer")
-                    .withSelector(standardLabels(primary));
-            for (Integer loadBalancerPort : loadBalancerPorts) {
-                serviceSpecBuilder = serviceSpecBuilder
-                        .addNewPort()
-                        .withName("sni-" + loadBalancerPort)
-                        .withPort(loadBalancerPort)
-                        .withTargetPort(new IntOrString(SHARED_SNI_PORT))
-                        .withProtocol("TCP")
-                        .endPort();
-            }
-            return Stream.of(serviceSpecBuilder.endSpec().build());
+        ClusterIngressNetworkingModel firstIngressModel = ingressModels.get(0);
+        KafkaProxyIngress ingress = firstIngressModel.ingress();
+        Set<Annotations.ClusterIngressBootstrapServers> bootstraps = ingressModels.stream()
+                .map(ingressModel -> ingressModel.sharedLoadBalancerServiceRequirements().orElseThrow().bootstrapServersToAnnotate())
+                .collect(Collectors.toSet());
+
+        String serviceName = ResourcesUtil.name(ingress);
+        var serviceSpecBuilder = new ServiceBuilder()
+                .withMetadata(sniLoadbalancerServiceMetadata(primary, firstIngressModel, serviceName, bootstraps))
+                .withNewSpec()
+                .withType("LoadBalancer")
+                .withSelector(standardLabels(primary));
+        for (Integer loadBalancerPort : loadBalancerPorts) {
+            serviceSpecBuilder = serviceSpecBuilder
+                    .addNewPort()
+                    .withName("sni-" + loadBalancerPort)
+                    .withPort(loadBalancerPort)
+                    .withTargetPort(new IntOrString(SHARED_SNI_PORT))
+                    .withProtocol("TCP")
+                    .endPort();
         }
+        return Stream.of(serviceSpecBuilder.endSpec().build());
     }
 
     @Override
